--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "description": "Begin basic Hello World! app for Node",
   "scripts": {
-    "start": "cross-env NODE_ENV=testing npx sandbox"
+    "start": "NODE_ENV=testing npx sandbox"
   },
   "devDependencies": {
-    "@architect/sandbox": "latest",
-    "cross-env": "^6.0.3"
+    "@architect/sandbox": "latest"
   }
 }
