--- a/src/http/get-kata_txt/package.json
+++ b/src/http/get-kata_txt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "begin-app-get-index",
+  "name": "begin-app-get-kata-txt",
   "dependencies": {
     "@architect/functions": "latest",
     "@begin/data": "latest",
